chore(contract): regenerate openapi and schema for related endpoints
